--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"styled-components": "^5.3.5"
 	},
 	"scripts": {
-		"start": "concurrently \"react-scripts start\" \"gulp\"",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
